Release 1.1.0 - Update Java 25
- Updated Java version to 25 and adjusted Maven properties accordingly
- Refactored Moderator class to streamline constructor and improve input handling
- Enhanced Rating class to simplify flag management and improve readability
- Updated deployment configuration to use latest GitHub Actions and JDK
- Removed unnecessary imports and cleaned up code for better maintainability
- Updated README and example usage to reflect changes in the API