@@ -1,74 +1,50 @@
 package de.MCmoderSD.omni;
 
-import com.openai.client.OpenAIClient;
 import com.openai.client.okhttp.OpenAIOkHttpClient;
-import com.openai.models.moderations.ModerationCreateParams;
-import com.openai.models.moderations.ModerationImageUrlInput;
-import com.openai.models.moderations.ModerationMultiModalInput;
-import com.openai.models.moderations.ModerationTextInput;
-import com.openai.models.moderations.ModerationModel;
+import com.openai.models.moderations.*;
 import com.openai.services.blocking.ModerationService;
-
-import de.MCmoderSD.imageloader.enums.Extension;
 import de.MCmoderSD.imageloader.tools.ImageEncoder;
 import de.MCmoderSD.omni.objects.Rating;
-
 import org.jetbrains.annotations.Nullable;
 
 import java.awt.image.BufferedImage;
+import java.util.LinkedHashMap;
+import java.util.List;
 
-import java.io.IOException;
+import static com.openai.models.moderations.ModerationModel.*;
+import static de.MCmoderSD.imageloader.enums.Extension.*;
 
-import java.util.Arrays;
-import java.util.HashMap;
-
-@SuppressWarnings("ALL")
+@SuppressWarnings("unused")
 public class Moderator {
 
     // Constants
-    public static final ModerationModel MODEL = ModerationModel.OMNI_MODERATION_LATEST;
+    public static final ModerationModel MODEL = OMNI_MODERATION_LATEST;
 
     // Attributes
     private final ModerationService service;
 
-    /**
-     * Constructs a Moderator using a given OpenAIClient.
-     *
-     * @param client the OpenAI client instance to use
-     */
-    public Moderator(OpenAIClient client) {
-        service = client.moderations();
+    // Constructor
+    public Moderator(String apiKey, @Nullable String organizationId, @Nullable String projectId, @Nullable String baseUrl) {
+        var builder = OpenAIOkHttpClient.builder().apiKey(apiKey);
+        if (organizationId != null && !organizationId.isBlank()) builder.organization(organizationId);
+        if (projectId != null && !projectId.isBlank()) builder.project(projectId);
+        if (baseUrl != null && !baseUrl.isBlank()) builder.baseUrl(baseUrl);
+        service = builder.build().moderations();
     }
 
-    /**
-     * Constructs a Moderator using only an API key.
-     *
-     * @param apiKey the OpenAI API key
-     */
+    public Moderator(String apiKey, String organizationId, String projectId) {
+        this(apiKey, organizationId, projectId, null);
+    }
+
+    public Moderator(String apiKey, String baseUrl) {
+        this(apiKey, null, null, baseUrl);
+    }
+
     public Moderator(String apiKey) {
         this(apiKey, null, null);
     }
 
-    /**
-     * Constructs a Moderator with optional project and organization.
-     *
-     * @param apiKey       the OpenAI API key
-     * @param project      optional project ID
-     * @param organization optional organization ID
-     */
-    public Moderator(String apiKey, @Nullable String project, @Nullable String organization) {
-        var builder = OpenAIOkHttpClient.builder().apiKey(apiKey);
-        if (project != null && !project.isBlank()) builder.project(project);
-        if (organization != null && !organization.isBlank()) builder.organization(organization);
-        service = builder.build().moderations();
-    }
-
-    /**
-     * Encodes a plain text into a ModerationMultiModalInput.
-     *
-     * @param text the text to encode
-     * @return a ModerationMultiModalInput representing the text
-     */
+    // Encode Inputs
     private static ModerationMultiModalInput encode(String text) {
         return ModerationMultiModalInput.ofText(ModerationTextInput
                 .builder()
@@ -77,96 +53,46 @@ public class Moderator {
         );
     }
 
-    /**
-     * Encodes an image into a ModerationMultiModalInput.
-     *
-     * @param image the BufferedImage to encode
-     * @return a ModerationMultiModalInput representing the image
-     * @throws IOException if encoding the image fails
-     */
-    private static ModerationMultiModalInput encode(BufferedImage image) throws IOException {
+    private static ModerationMultiModalInput encode(BufferedImage image) {
         return ModerationMultiModalInput.ofImageUrl(ModerationImageUrlInput
                 .builder()
                 .imageUrl(ModerationImageUrlInput
                         .ImageUrl
                         .builder()
-                        .url(ImageEncoder.toBase64(image, Extension.PNG))
+                        .url(ImageEncoder.toBase64(image, PNG))
                         .build()
                 ).build()
         );
     }
 
-    /**
-     * Creates a ModerationCreateParams.Input from multiple multi-modal inputs.
-     *
-     * @param inputs an array of ModerationMultiModalInput
-     * @return the constructed ModerationCreateParams.Input
-     */
-    private static ModerationCreateParams.Input createInput(ModerationMultiModalInput... inputs) {
-        return ModerationCreateParams.Input.ofModerationMultiModalArray(Arrays.asList(inputs));
+    // Build Parameters
+    private static ModerationCreateParams buildParams(ModerationMultiModalInput... inputs) {
+        return ModerationCreateParams.builder()
+                .model(MODEL)
+                .inputOfModerationMultiModalArray(List.of(inputs))
+                .build();
     }
 
-    /**
-     * Creates a ModerationCreateParams using a given input.
-     *
-     * @param input the input to use for moderation
-     * @return the created ModerationCreateParams
-     */
-    private static ModerationCreateParams createParams(ModerationCreateParams.Input input) {
-        return ModerationCreateParams.builder().model(MODEL).input(input).build();
+    private static ModerationCreateParams buildParams(String... input) {
+        return ModerationCreateParams.builder()
+                .model(MODEL)
+                .inputOfStrings(List.of(input))
+                .build();
     }
 
-    /**
-     * Creates a ModerationCreateParams using multiple input strings.
-     *
-     * @param input the input strings to moderate
-     * @return the created ModerationCreateParams
-     */
-    private static ModerationCreateParams createParams(String... input) {
-        return ModerationCreateParams.builder().model(MODEL).inputOfStrings(Arrays.stream(input).toList()).build();
-    }
-
-    /**
-     * Creates a ModerationCreateParams using a single input string.
-     *
-     * @param input the input string to moderate
-     * @return the created ModerationCreateParams
-     */
-    private static ModerationCreateParams createParams(String input) {
-        return ModerationCreateParams.builder().model(MODEL).input(input).build();
-    }
-
-    /**
-     * Moderates a single text input and returns the result as a Rating.
-     *
-     * @param text the text to moderate
-     * @return the moderation result as a Rating
-     */
+    // Moderation Text
     public Rating moderate(String text) {
-
-        // Create Moderation Request
-        var request = createParams(text);
-
-        // Call Moderation Service
-        var response = service.create(request);
-
-        // Parse Rating and return
-        return new Rating(response.results().getFirst());
+        return moderate(new String[]{ text }).get(text);
     }
 
-    /**
-     * Moderates multiple text inputs and returns the results in a HashMap.
-     *
-     * @param text the array of texts to moderate
-     * @return a HashMap of text to corresponding Rating
-     */
-    public HashMap<String, Rating> moderate(String... text) {
+    // Moderation Multiple Texts
+    public LinkedHashMap<String, Rating> moderate(String... text) {
 
         // Create HashMap to store ratings
-        HashMap<String, Rating> ratings = new HashMap<>();
+        LinkedHashMap<String, Rating> ratings = new LinkedHashMap<>(text.length);
 
         // Create Moderation Request
-        var request = createParams(text);
+        var request = buildParams(text);
 
         // Call Moderation Service
         var response = service.create(request);
@@ -178,17 +104,11 @@ public class Moderator {
         return ratings;
     }
 
-    /**
-     * Moderates an image input and returns the result as a Rating.
-     *
-     * @param image the image to moderate
-     * @return the moderation result as a Rating
-     * @throws IOException if encoding the image fails
-     */
-    public Rating moderate(BufferedImage image) throws IOException {
+    // Moderation Image
+    public Rating moderate(BufferedImage image) {
 
         // Create Moderation Request
-        var request = createParams(createInput(encode(image)));
+        var request = buildParams(encode(image));
 
         // Call Moderation Service
         var response = service.create(request);
@@ -197,18 +117,16 @@ public class Moderator {
         return new Rating(response.results().getFirst());
     }
 
-    /**
-     * Moderates both text and image input and returns the result as a Rating.
-     *
-     * @param text  the text to moderate
-     * @param image the image to moderate
-     * @return the moderation result as a Rating
-     * @throws IOException if encoding the image fails
-     */
-    public Rating moderate(String text, BufferedImage image) throws IOException {
+    // Moderation Multi-Modal
+    public Rating moderate(BufferedImage image, String... text) {
+
+        // Encode inputs
+        ModerationMultiModalInput[] inputs = new ModerationMultiModalInput[text.length + 1];
+        for (var i = 0; i < text.length; i++) inputs[i + 1] = encode(text[i]);
+        inputs[0] = encode(image);
 
         // Create Moderation Request
-        var request = createParams(createInput(encode(text), encode(image)));
+        var request = buildParams(inputs);
 
         // Call Moderation Service
         var response = service.create(request);
